@@ -133,6 +133,7 @@ Version 1.11.0-svn:
    * Drained HP amounts can now be negative.  Trigger this by setting
 	 a negative value in the [drain] or [heal_on_hit] weapon special.
    * Negative drain amounts will not take a unit below 1 health.
+   * Added [show_if] support to [objectives] [note]
  * Miscellaneous and bug fixes:
    * Fix wrong preferences path suffix (1.1 instead of 1.10) on Linux and other
      platforms using XDG layout (no compiled-in preferences path override,
